#TONIC-27 fixed Make Tonic recognize game aborted as a result